class Disciplina {

    private String nome;
    private Professor professor;
    private List<Aluno> alunosMatriculados;

    public Disciplina(String nome, Professor professor) {}

    public boolean adicionarAluno(Aluno aluno) {}

    public void removerAluno(Aluno aluno) {}

    public boolean isAtiva() {}

    public List<Aluno> getAlunosMatriculados() {}
}
