public enum Status {
    ATIVA,
    EM_OFERTA,
    INATIVA,
    CONCLUIDA
}
